[workspace]
resolver = "2"
members = [
    "loom-proto",
    "loom-capture",
    "loom-encode",
    "loom-audio",
    "loom-input",
    "loom-vdisplay",
    "loomd",
    "tools/latency-probe",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1"
ciborium = "0.2"
half = "2"
serde_json = "1"
hex = "0.4"

# --- loomd runtime (host daemon only; loom-proto stays I/O-free) ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
rcgen = { version = "0.13", default-features = false, features = ["aws_lc_rs", "pem", "crypto"] }
clap = { version = "4", features = ["derive"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# --- loom-capture (Linux portal ScreenCast → PipeWire, M1.4) ---
ashpd = { version = "0.13", default-features = false, features = ["tokio", "screencast"] }
pipewire = { version = "0.8", features = ["v0_3_77"] }
