[package]
name = "loom-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true

# The portal/PipeWire stack is Linux-only and links libpipewire, which does not
# exist on macOS — target-gated so the workspace builds on the Mac host.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd.workspace = true
pipewire.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
objc2-screen-capture-kit.workspace = true
objc2-core-media.workspace = true
objc2-core-video.workspace = true
block2.workspace = true
dispatch2.workspace = true

[[example]]
name = "capture-dump"
path = "examples/capture-dump.rs"
