[package]
name = "loom-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true

# The portal/PipeWire stack is Linux-only and links libpipewire, which does not
# exist on macOS — target-gated so the workspace builds on the Mac host.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd.workspace = true
pipewire.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
# `objc2-core-graphics` unlocks SCDisplay::displayID() (the CGDirectDisplayID a
# capture target is named by, M6.2); `objc2-core-foundation` unlocks
# SCDisplay::frame() (the display's position in the global layout, M6.3 immersive
# placement). The workspace set omits both.
objc2-screen-capture-kit = { workspace = true, features = [
    "objc2-core-graphics",
    "objc2-core-foundation",
] }
objc2-core-media.workspace = true
objc2-core-video.workspace = true
block2.workspace = true
dispatch2.workspace = true

[[example]]
name = "capture-dump"
path = "examples/capture-dump.rs"
