[package]
name = "loomd"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Enable the NVENC encoder backend (Linux/NVIDIA); forwards to loom-encode.
nvenc = ["loom-encode/nvenc"]

[dependencies]
loom-proto = { path = "../loom-proto" }
loom-capture = { path = "../loom-capture" }
loom-encode = { path = "../loom-encode" }
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
clap.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
